# Git-Map

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  docker-compose.yml  docker-compose.yml.example  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  roadmap.md  sitemap.xml  token_test_deleteme.md
.claude/: settings.local.json
.devcontainer/: devcontainer.json  docker-compose.override.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
apps/: __init__.py
apps/cli/: __init__.py
apps/cli/gitmap/: README.md  __init__.py  help_formatter.py  main.py  pyproject.toml
apps/cli/gitmap/commands/: __init__.py  auto_pull.py  branch.py  checkout.py  cherry_pick.py  clone.py  commit.py  completions.py  config.py  context.py  daemon.py  diff.py  doctor.py  init.py  layer-settings-merge.py  list.py  log.py  merge-from.py  merge.py  notify.py  pull.py  push.py  revert.py  setup_repos.py  show.py  stash.py  status.py  tag.py  utils.py
apps/cli/gitmap/configs/: gitmap_config.json
apps/cli/gitmap/docs/: gitmap_spec.md
apps/cli/gitmap/scripts/: __init__.py
apps/client/gitmap-client/: README.md  __init__.py  app.py  pyproject.toml
apps/client/gitmap-client/screens/: __init__.py  commit_history.py  repo_picker.py  status_view.py
apps/client/gitmap-client/widgets/: __init__.py  status_panel.py
apps/client/gitmap-gui/: README.md  __init__.py  pyproject.toml
apps/client/gitmap-gui/gitmap_gui/: __init__.py  app.py  config.py  utils.py
apps/client/gitmap-gui/gitmap_gui/routes/: __init__.py  branch.py  commit.py  config.py  diff.py  lsm 2.py  lsm.py  main.py  merge.py  portal.py  remote.py  repository.py  services.py
apps/client/gitmap-gui/gitmap_gui/static/css/: style.css
apps/client/gitmap-gui/gitmap_gui/static/js/: app.js
apps/client/gitmap-gui/gitmap_gui/templates/: base.html
apps/mcp/gitmap-mcp/: CURSOR_MCP_CONFIG.md  main.py  pyproject.toml
apps/mcp/gitmap-mcp/configs/: gitmap_mcp_config.json.example
apps/mcp/gitmap-mcp/docs/: gitmap_mcp_spec.md
apps/mcp/gitmap-mcp/scripts/: __init__.py
apps/mcp/gitmap-mcp/scripts/tools/: __init__.py  branch_tools.py  commit_tools.py  context_tools.py  layer_tools.py  portal_tools.py  remote_tools.py  repository_tools.py  stash_tools.py  utils.py
commands/: index.html
commands/auto-pull/: index.html
commands/branch/: index.html
commands/checkout/: index.html
commands/cherry-pick/: index.html
commands/clone/: index.html
commands/commit/: index.html
commands/completions/: index.html
commands/config/: index.html
commands/context/: index.html
commands/daemon/: index.html
commands/diff/: index.html
commands/doctor/: index.html
commands/init/: index.html
commands/list/: index.html
commands/log/: index.html
commands/lsm/: index.html
commands/merge/: index.html
commands/merge-from/: index.html
commands/notify/: index.html
commands/pull/: index.html
commands/push/: index.html
commands/revert/: index.html
commands/setup-repos/: index.html
commands/show/: index.html
commands/stash/: index.html
commands/status/: index.html
commands/tag/: index.html
configs/: env.example
contributing/: index.html
docker/: Dockerfile
docs/: contributing.md  index.md  technical-paper.md
docs/commands/: auto-pull.md  branch.md  checkout.md  cherry-pick.md  clone.md  commit.md  completions.md  config.md  context.md  daemon.md  diff.md  doctor.md  index.md  init.md  list.md  log.md  lsm.md  merge-from.md  merge.md  notify.md  pull.md  push.md  revert.md  setup-repos.md  show.md  stash.md  status.md  tag.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guides/: api-reference.md  branching.md  portals.md  reviewing-diffs.md  workflow.md
documentation/: nav_spec.md
documentation/project_specs/00-governance/: audit_spec.md  docs_spec.md  formatting_spec.md  ide_agent.md  protocols_spec.md
documentation/project_specs/10-architecture/: architecture_spec.md  repo_spec.md
documentation/project_specs/20-operations/: cut_release_spec.md  monorepo_ops_spec.md  release_notes.md  template_conversion_spec.md
documentation/project_specs/30-apps/: apps_add_feature_spec.md  apps_folder_spec.md  arcgis_api_mapping.md
documentation/project_specs/90-templates/: spec_template.md
documentation/specs/: SERVICE_LAYER_VERSIONING.md
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/api-reference/: index.html
guides/branching/: index.html
guides/portals/: index.html
guides/reviewing-diffs/: index.html
guides/workflow/: index.html
integrations/arcgis_pro/: GitMap.pyt  README.md  __init__.py  test_toolbox.py
integrations/openclaw/: README.md  index.ts  install.sh  openclaw.plugin.json  server.py  tools.py
integrations/openclaw/tests/: test_tools.py
landing/: index.html
marketing/: README.md  blog-post.md  launch-strategy.md  reddit-rgis-post.md
scripts/: release_checks.py  verify_dist_install.py
search/: search_index.json
technical-paper/: index.html
