[project]
name = "gitmap"
version = "0.1.0"
description = "Git-like version control for ArcGIS web maps"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "arcgis>=2.3.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "deepdiff>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "coverage>=7.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
pythonpath = ["packages"]
testpaths = ["packages/gitmap_core/tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["gitmap_core"]

[tool.coverage.run]
source = ["packages/gitmap_core"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
