[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitmap-cli"
version = "0.3.0"
description = "CLI for GitMap - Version control for ArcGIS web maps"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GitMap Team"}
]
dependencies = [
    "gitmap_core>=0.1.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
gitmap = "gitmap_cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools]
packages = ["gitmap_cli", "gitmap_cli.commands"]

[tool.setuptools.package-dir]
gitmap_cli = "."
"gitmap_cli.commands" = "commands"
