[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitmap-cli"
version = "0.6.0"
description = "CLI for GitMap — Git-like version control for ArcGIS web maps"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = {text = "MIT"}
authors = [
    {name = "TR Ingram", email = "tr@ingramgeoai.com"}
]
keywords = ["arcgis", "gis", "version-control", "web-maps", "esri", "git", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "gitmap-core>=0.6.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "apscheduler>=3.10.0",
]

[project.scripts]
gitmap = "gitmap_cli.main:main"

[project.urls]
Homepage = "https://github.com/14-TR/Git-Map"
Repository = "https://github.com/14-TR/Git-Map"
Documentation = "https://github.com/14-TR/Git-Map/blob/main/README.md"
"Bug Tracker" = "https://github.com/14-TR/Git-Map/issues"
Changelog = "https://github.com/14-TR/Git-Map/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["gitmap_cli", "gitmap_cli.commands"]

[tool.setuptools.package-dir]
gitmap_cli = "."
"gitmap_cli.commands" = "commands"

[tool.setuptools.package-data]
gitmap_cli = ["py.typed"]
